--- a/mpp/sample/yjsnpi/venc.ini
+++ b/mpp/sample/yjsnpi/venc.ini
@@ -21,4 +21,7 @@ ch1_kbps=1024
 ch1_gop=1		 
 ch1_udp_bind_port=20000
 ch1_udp_send_ip=192.168.0.167
-ch1_udp_send_port=5000
+ch1_udp_send_port=5000 
+
+awb_speed_custom=1  # 0-disable, 1-enable
+awb_speed=2048      # 0~4095
